--- a/nginx/blog.conf
+++ b/nginx/blog.conf
@@ -6,7 +6,7 @@ server {
 }
 
 server {
-  listen 443 ssl;
+  listen 443 ssl http2;
   server_name www.danielcortes.xyz;
   
   ssl_certificate     /etc/nginx/certs/live/www.danielcortes.xyz/fullchain.pem;  
