Agregando danielcortes.xyz

--- a/nginx/blog.conf
+++ b/nginx/blog.conf
@@ -18,3 +18,24 @@ server {
     proxy_pass http://blog:80/;
   }
 }
+
+server {
+  listen 80;
+  server_name danielcortes.xyz;
+
+  return 301 https://$host$request_uri;
+}
+
+server {
+  listen 443 ssl http2;
+  server_name danielcortes.xyz;
+  
+  ssl_certificate     /etc/nginx/certs/live/danielcortes.xyz/fullchain.pem;  
+  ssl_certificate_key /etc/nginx/certs/live/danielcortes.xyz/privkey.pem;  
+
+  resolver 127.0.0.11;
+
+  location / {
+    proxy_pass http://blog:80/;
+  }
+}
