--- a/nginx/static.conf
+++ b/nginx/static.conf
@@ -8,7 +8,7 @@ server {
 server {
   listen 443 ssl http2;
   server_name static.danielcortes.xyz;
-  
+
   ssl_certificate     /etc/nginx/certs/live/static.danielcortes.xyz/fullchain.pem;  
   ssl_certificate_key /etc/nginx/certs/live/static.danielcortes.xyz/privkey.pem;  
 
@@ -17,4 +17,11 @@ server {
   location / {
     proxy_pass http://static:3000/;
   }
+
+  gzip on;
+  gzip_types *;
+  gzip_static on;
+
+  expires 7d;
+  add_header Cache-Control "public";
 }
